<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guide</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>

    <string-array name="menu">
        <item>Places</item>
        <item>Products</item>
        <item>Map</item>
        <item>Settings</item>
    </string-array>

    <string name="title_activity_google_maps_">GoogleMaps_Activity</string>
    <string name="title_activity_launch_map">LaunchMapActivity</string>
    <string name="title_activity_launch_settings">LaunchSettingsActivity</string>
    
    <!-- Categories -->
    <string name="categories">Categories</string>
    <string name="categories_description">Choose the categories you want to show</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_bar">Bar</string>
    <string name="category_pharmacy">Pharmacy</string>
    <string name="category_bank">Bank</string>
    <string name="category_movie_theater">Movie theater</string>
    <string name="category_clothing_store">Clothing Store</string>
    <string name="category_grocery_or_supermarket">Supermarket</string>
    
    <!-- Adapter de lugares -->
    <string name="products_text_categories_row">Number of products:</string>
    <string name="rating_text_categories_row">Rating:</string>
    <string name="category_text_categories_row">Category:</string>
    <string name="description_text_categories_row">Descripcion:</string>
    
    <!-- Adapter de ofertas -->
    <string name="title_place_text_products_row">Place:</string>
    <string name="description_text_products_row">Description:</string>
    <string name="price_text_products_row">Price:</string>
    <string name="price_currency_products_row"> $</string>

    <!-- Preferencias del mapa y sitios-->
    <string name="map_and_places_preferences">Map and Places Preferences</string>
    
    <string name="max_distance">Max distance</string>
    <string name="max_distance_description">Maximum distance at which you want to see the places</string>
    
    <string-array name="menu_max_distance">
        <item>Very Near</item>
        <item>Near</item>
        <item>Medium distance</item>
        <item>Far</item>
    </string-array>
    
    <string-array name="menu_max_distance_values">
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>
    
    <string name="max_places">Max places</string>
    <string name="max_places_description">Maximum number of places you want to see on the map</string>
    
    <string-array name="menu_max_places">
        <item>Few</item>
        <item>More than a few</item>
        <item>Good few</item>
        <item>Many</item>
    </string-array>
    
    <string-array name="menu_max_places_values">
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
    </string-array>
    
    <string name="max_products">Max products per place</string>
    <string name="max_products_description">Maximum number of products you want to see on a place</string>
    
    <string-array name="menu_max_products">
		<item>Few</item>
        <item>More than a few</item>
        <item>Good few</item>
        <item>Many</item>
    </string-array>
    
    <string-array name="menu_max_products_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
</resources>
