<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image_products_row"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_products_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:typeface="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title_place_text_products_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/title_place_text_products_row"
                    android:textSize="13sp"
                    android:typeface="normal" />
                
                <TextView
                    android:id="@+id/title_place_products_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="13sp"
                    android:typeface="normal" />

            </LinearLayout>
          
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/description_text_products_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/description_text_products_row"
                    android:textSize="13sp"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/description_products_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="13sp"
                    android:typeface="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <TextView
                    android:id="@+id/price_text_products_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:text="@string/price_text_products_row"
                    android:textSize="15sp"
                    android:typeface="normal" />
                
                <TextView
                    android:id="@+id/price_products_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:textSize="15sp"
                    android:typeface="normal"
                    android:gravity="right" />
                
                <TextView
                    android:id="@+id/price_text_products_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:text="@string/price_currency_products_row"
                    android:textSize="15sp"
                    android:typeface="normal" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    
</RelativeLayout>